@@ -113,6 +113,26 @@ else !HAVE_WINDOWS
 SRC_ALL_PAGES += nut.exe.txt
 endif !HAVE_WINDOWS
 
+if WITH_NUT_MONITOR
+SRC_CLIENT_PAGES += NUT-Monitor.txt
+if WITH_MANS
+MAN_CLIENT_PAGES += \
+	NUT-Monitor-py2gtk2.$(MAN_SECTION_CMD_SYS) \
+	NUT-Monitor-py3qt5.$(MAN_SECTION_CMD_SYS) \
+	NUT-Monitor.$(MAN_SECTION_CMD_SYS)
+
+# Alias page for one text describing two commands:
+NUT-Monitor-py2gtk2.$(MAN_SECTION_CMD_SYS): NUT-Monitor.$(MAN_SECTION_CMD_SYS)
+	touch $@
+
+NUT-Monitor-py3qt5.$(MAN_SECTION_CMD_SYS): NUT-Monitor.$(MAN_SECTION_CMD_SYS)
+	touch $@
+
+endif WITH_MANS
+else !WITH_NUT_MONITOR
+SRC_ALL_PAGES += NUT-Monitor.txt
+endif !WITH_NUT_MONITOR
+
 man@MAN_SECTION_CMD_SYS_BASE@_MANS = $(MAN_CLIENT_PAGES)
 
 HTML_CLIENT_MANS = \
@@ -131,6 +151,10 @@ HTML_CLIENT_MANS = \
 if HAVE_WINDOWS
 HTML_CLIENT_MANS += nut.exe.html
 endif HAVE_WINDOWS
+
+if WITH_NUT_MONITOR
+HTML_CLIENT_MANS += NUT-Monitor.html
+endif WITH_NUT_MONITOR
 
 SRC_TOOL_PAGES = nut-scanner.txt nut-recorder.txt nutconf.txt
 
